--- a/Formato Memoria/Capitulo1/1.4_Objetivos.tex
+++ b/Formato Memoria/Capitulo1/1.4_Objetivos.tex
@@ -1,4 +1,4 @@
-Dado que este sistema pretende aliviar todos los inconvenientes \emph{de forma} en que se pueda incurrir tanto al confeccionar la solicitud de fondo por rendir como en su posterior rendición, se estabecen los siguientes objetivos:
+Como este sistema pretende aliviar todos los inconvenientes \emph{de forma} que se puedan cometer tanto al confeccionar la solicitud de fondo por rendir como en su posterior rendición, se estabecen los siguientes objetivos:
 
 \subsection{Objetivo general}
     \begin{itemize}
