--- a/Formato Memoria/Capitulo3/3.2.2.1_Proyecto.tex
+++ b/Formato Memoria/Capitulo3/3.2.2.1_Proyecto.tex
@@ -1,15 +1,42 @@
-Para comenzar el proyecto, lo primero que se realiza es identificar el problema para ver cuál es el enfoque en el que se debe solucionar. Luego se procede a capturar las Historias de Usuarios que representan las características del proyecto. Tras tener una noción general de lo que el proyecto se procede a categorizar las Historias de Usuario creando los sprints. Estos son los que dan vida al proyecto a medida que se van terminando los sprints y cumpliendo con los tiempos planificados y siguiendo las fases que se muestran el en la \textbf{Figura \ref{fig: Proceso_Proyecto}} (en la siguiente sección se habla con más detalle sobre esto). 
+El nacimiento de este proyecto se inicia cuando el autor de esta memoria se encuentra en calidad de Presidente del CAA de Ingeniería Civil en Computación entre los años 2016 y 2018. Siempre que se realizaba alguna actividad había problemas con las rendiciones. Un problema frecuente era cuadrar la suma de las boletas y/o facturas con el monto solicitado a la Institución para realizar el evento. 
 
-Para efectos de esta memoria, los sprints están planificado de la siguiente manera:
+Posteriormente, en el momento de la revisión de la rendición por parte del departamento de Tesorería, al primer error que se encontraba se detenía la revisión, se rechazaba la rendición y se notificaba ese error. Posiblemente, la rendición podía tener más errores de alguna boleta fuera de la fecha o de algún gasto incurrido que no pertenecía a alguna de las categorías mencionadas en la solicitud, entre otras. Pero debido a que se detiene la revisión al primer error que encuentran, no enviaban toda información, por lo que la OE corregía sólo lo notificado y al momento de realizar la segunda revisión o más, si se encontraban nuevos errores, se volvía a rechazar. A consecuencia de lo anterior, demoraba la devolución del dinero e impedía que se realizaran nuevas actividades ya que existía una rendición pendiente de aprobación.
+
+Es por ello que el autor lo propuso como tema de memoria y al momento de ser aceptada, comienza con el proceso de formular el proyecto, realizando entrevistas para detectar las historias de usuarios y así tener una planificación general del proyecto, la cual podría modificarse a medida que avanza en este, ya que se podrían requerir nuevas funcionalidades o cambios de prioridades de funcionalidades requeridas con anterioridad. Finalmente, la organización de los sprints del proyecto sigue el proceso que conlleva realizar una Solicitud de Fondo por Rendir por parte de la OE, las cuales se mencionan a continuación:
 
 \begin{enumerate}
-    \item Solicitud
-    \item Solicitud y Resolución
-    \item Búsqueda
-    \item Rendición
-    \item Usuarios
-    \item Documentación y Panel de ayuda
-    \item Detalles
+    \item Solicitud.
+    \item Solicitud y Resolución.
+    \item Búsqueda.
+    \item Rendición.
+    \item Usuarios.
+    \item Documentación y Panel de ayuda.
+    \item Detalles.
 \end{enumerate}
 
 Por último, tras cumplir con todos los sprints mencionados anteriormente se realiza la entrega del producto y la puesta en marcha.
+
+
+
+
+
+
+%El problema se detecto en el periodo en que el autor de esta memoria se encontraba en calidad de Presidente del CAA de Ingeniería Civil en Computación. Todo comienza al momento de organizar la primera rendición en donde se desconocía al darse cuenta que la cantidad de boletas que incurrieron en un evento y el tiempo que toma en la selección de ciertas boletas para realizar el calce del monto solicitado. Esto se repetia constantemente en los demas eventos realizado y ademas del caos que se formaba cuando la Institución revisaba la rendición y encontraba algun error ya que rechazaba la rendición notificandolo, más no detallaba si habia otro error. Es por ello que se comenzó a analizar el problema y siendo el tema de memoria a solucionar. Tras el analisis se procedio a capturar las historias de usuarios de forma general para realizar una planificación general con posibles modificaciones a medida que avanza el proyecto. Para efectos de esta memoria, los sprints están planificado de la siguiente manera:
+
+
+
+%Para comenzar el proyecto, lo primero que se realiza es identificar el problema para ver cuál es el enfoque en el que se debe solucionar. Luego se procede a capturar las Historias de Usuarios que representan las características del proyecto. Tras tener una noción general de lo que el proyecto se procede a categorizar las Historias de Usuario creando los sprints. Estos son los que dan vida al proyecto a medida que se van terminando los sprints y cumpliendo con los tiempos planificados y siguiendo las fases que se muestran el en la \textbf{Figura \ref{fig: Proceso_Proyecto}} (en la siguiente sección se habla con más detalle sobre esto). 
+
+%Para efectos de esta memoria, los sprints están planificado de la siguiente manera:
+
+%\begin{enumerate}
+%    \item Solicitud
+%    \item Solicitud y Resolución
+%    \item Búsqueda
+%    \item Rendición
+%    \item Usuarios
+%    \item Documentación y Panel de ayuda
+%    \item Detalles
+%\end{enumerate}
+
+%Por último, tras cumplir con todos los sprints mencionados anteriormente se realiza la entrega del producto y la puesta en marcha.
