--- a/Formato Memoria/Capitulo3/3.2.2.2_Iteracion.tex
+++ b/Formato Memoria/Capitulo3/3.2.2.2_Iteracion.tex
@@ -6,7 +6,7 @@ El proyecto comprende de muchas ``Entregas'', y cada una de ellas se realiza a t
     \item Cada iteración tiene un objetivo a cumplir según la funcionalidad del sistema. Para este proyecto se han planificado \textbf{siete} sprints.
 \end{itemize}
 
-Para organizar cada sprint que corresponde al desarrollo del sistema, existe una etapa previa la cual busca capturar las historias de usuarios que ayudan a tener una visión de lo que es el proyecto, permitiendo realizar el diseño del sistema. Tras lo mencionado anteriormente, se procede al inicio de la etapa de construcción.
+Para organizar cada sprint que corresponde al desarrollo del sistema, existe una etapa previa la cual busca capturar las historias de usuario que ayudan a tener una visión de lo qué es el proyecto, permitiendo realizar el diseño del sistema. Tras lo mencionado anteriormente, se procede al inicio de la etapa de construcción.
 
 Los sprint se organizan de acuerdo con la funcionalidad de la aplicación quedando de la siguiente forma:
 
