--- a/Formato Memoria/Capitulo4/4.2_Modelos_Contexto_Solicitud.tex
+++ b/Formato Memoria/Capitulo4/4.2_Modelos_Contexto_Solicitud.tex
@@ -75,6 +75,6 @@ Dado a lo mencionado anteriormente es que se realiza un diagrama de estado, el c
     \caption{\label{fig: diagrama_estado}Diagrama de estado del proceso que debe simular la aplicación.}
 \end{figure}
 
-El diagrama de estado que se puede observar en la \textbf{Figura \ref{fig: diagrama_estado}} muestra las actividades que sólo se encarga la OE las cuales son la confección de la Solicitud, recibir la Resolución emitida por la Universidad y la posterior Rendición del fondo por rendir. El resto de las actividades que se muestran en las \textbf{Figuras \ref{fig: Solicitud_Federacion}} y \textbf{\ref{fig: Solicitud_CAA}} son responsabilidad de las demás entidades involucradas en el proceso. 
+El diagrama de estado que se observa en la \textbf{Figura \ref{fig: diagrama_estado}} muestra las actividades que son de responsabilidad exclusiva de la OE, las cuales son la confección de la Solicitud, la recepción de la Resolución emitida por la Universidad y la posterior Rendición del fondo presupestado. El resto de las actividades que se muestran en las \textbf{Figuras \ref{fig: Solicitud_Federacion}} y \textbf{\ref{fig: Solicitud_CAA}} son realizadas por las demás entidades involucradas en el proceso.
 
-A grandes rasgos el sistema debe permitir simular el proceso de una Solicitud de Fondo por Rendir. Este proceso conlleva la confección de una Solicitud e imprimirla en PDF. En caso de que la solicitud fue aceptada, la OE recibe la RU enviada por parte de la Casa de Estudio, la cual debe subir una copia digitalizada de esta al sistema. Por último, debe confeccionar la Rendición de gastos que incurrieron en el evento e imprimirla en PDF.
+A grandes rasgos, el sistema emula el proceso de una Solicitud de Fondo por Rendir desde el punto de vista de la OE. Este proceso conlleva la confección de una Solicitud y su exportación en formato PDF. En caso que la solicitud sea aceptada, la OE recibe la RU respectiva enviada por parte de la Casa de Estudio. Luego, la OE almacena en el sistema una copia digitalizada de la RU respectiva en formato PDF. Por último, la OE debe confeccionar la Rendición de los gastos efectuados durante el evento y su posterior exportación en formato PDF.
