--- a/Formato Memoria/Capitulo4/4.3_CaracteristicasGenerales.tex
+++ b/Formato Memoria/Capitulo4/4.3_CaracteristicasGenerales.tex
@@ -1,4 +1,4 @@
-Después conocer los \textbf{Aspectos generales} y los \textbf{Modelos de contexto de solicitudes}, se procede a presentar los requerimientos del sistema como ``Historias de Usuario'' las cuales se pueden observar en los \textbf{Cuadros \ref{tabla:Historias_Ususario_Secretario_Finanza}} y \textbf{\ref{tabla:Historias_Ususario_Presidente}}. Estas fueron obtenidas a través de entrevistas a Presidentes y Secretarios de Finanzas de las respectivas OE, debido a que son los únicos que pueden realizar los procesos de solicitud de fondos por rendir. Además fueron confirmadas por las respectivas Secretarias de Escuelas, ya que ayudan a detectar alguna anomalía en las solicitudes y/o rendiciones antes de ser enviadas a los funcionarios encargados de decidir su aprobación. Cabe destacar que las historias de usuario que se muestra en los \textbf{Cuadros \ref{tabla:Historias_Ususario_Secretario_Finanza}} y \textbf{\ref{tabla:Historias_Ususario_Presidente}} se redactan s4egun el primero que la menciona.
+Después conocer los \textbf{Aspectos generales} y los \textbf{Modelos de contexto de solicitudes}, se procede a presentar los requerimientos del sistema como ``Historias de Usuario'' las cuales se pueden observar en los \textbf{Cuadros \ref{tabla:Historias_Ususario_Secretario_Finanza}} y \textbf{\ref{tabla:Historias_Ususario_Presidente}}. Estas fueron obtenidas a través de entrevistas a Presidentes y Secretarios de Finanzas de las respectivas OE, debido a que son los únicos que pueden realizar los procesos de solicitud de fondos por rendir. Además fueron confirmadas por las respectivas Secretarias de Escuelas, ya que ayudan a detectar alguna anomalía en las solicitudes y/o rendiciones antes de ser enviadas a los funcionarios encargados de decidir su aprobación. Cabe destacar que las historias de usuario que se muestra en los \textbf{Cuadros \ref{tabla:Historias_Ususario_Secretario_Finanza}} y \textbf{\ref{tabla:Historias_Ususario_Presidente}} se redactan según el primero que la menciona.
 
 \begin{table}[htbp]
     \centering
