--- a/Formato Memoria/Capitulo5/5.3_Arquitectura_Aplicacion.tex
+++ b/Formato Memoria/Capitulo5/5.3_Arquitectura_Aplicacion.tex
@@ -1,1 +1,1 @@
-Tras conocer como es el funcionamiento del sistema y las distintas vistas que tiene, es que se procede a identificar cómo el sistema interactúa con el cliente tanto de forma física como lógica. Lo anteriormente mencionado se ve a través del diseño de la Arquitectura del sistema lo cual se detalla a continuación.
+Tras conocer cómo es el funcionamiento del sistema y las distintas vistas que tiene, es que se procede a identificar cómo el sistema interactúa con el cliente tanto de forma física como lógica. Lo anteriormente mencionado se ve a través del diseño de la Arquitectura del sistema, lo cual se detalla a continuación.
