--- a/Formato Memoria/memoria.tex
+++ b/Formato Memoria/memoria.tex
@@ -190,10 +190,9 @@ Dedicado a ...
 	\section{Planificación de las iteraciones}
 	\subfile{Capitulo4/4.4_Planificacion}
 
-	
-
 %% contenido del quinto capítulo
 \chapter{Diseño de la aplicación}
+\label{sec:Disenio}
 \subfile{Capitulo5/5_Introduccion}
 
 	\section{Mapa de navegación}
@@ -209,28 +208,29 @@ Dedicado a ...
 		\subfile{Capitulo5/5.3.1_Arquitectura_fisica}
 
 		\subsection{Arquitectura lógica}
+		\label{sec:Arquitectura_Logica}
 		\subfile{Capitulo5/5.3.2_Arquitectura_logica}
 
-	\section{Diagrama de clases}
-
 	\section{Modelo de datos}
+	\subfile{Capitulo5/5.4_Modelo_de_datos}
 
-	
+	\section{Modelo Relacional}
+	\subfile{Capitulo5/5.5_Modelo_relacional}
 
-	
 
-	
-
-%% contenido del quinto capítulo
+%% contenido del sexto capítulo
 \chapter{Construcción y validación}
+\subfile{Capitulo6/6_Introduccion}
 
 	\section{Aplicación obtenida}
+	\subfile{Capitulo6/6.1_Aplicacion_Obtenida}
 
 	\section{Pruebas}
 
 	\section{Resultados}
 
-
+%% contenido del séptimo capítulo
+\chapter{Conclusiones}
 
 
 
