--- a/Formato Memoria/refs.bib
+++ b/Formato Memoria/refs.bib
@@ -78,7 +78,7 @@
   title = {Ingenieria del software. Un enfoque practico},
   publisher = {Mc Graw Hill},
   year = {2010},
-  author = {Ph.D. Roger S. Pressman},
+  author = {Roger S. Pressman},
   keywords = {},
   note = {11 de Octubre de 2018},
 }
