--- a/Formato Memoria/Capitulo3/3.2.2_Proceso.tex
+++ b/Formato Memoria/Capitulo3/3.2.2_Proceso.tex
@@ -1,1 +1,1 @@
-La gran parte de las metodologías realizan sus procesos como secuencia de pasos. Pero el gran problema es que si se comete un error en alguno de estos, volver atrás para solucionar el problema tiene un costo muy alto. Es por ello que para este proyecto se aplicó un proceso de ciclos en el desarrollo de este y así, en cualquier momento en que surjan problemas se pudiera volver atrás. Además, la metodología es tolerante al cambio siempre y cuando no afecte negativamente al proyecto, es por ello que la presencia de los stakeholders como participantes en el proyecto es de vital importancia. En los siguientes subítems discute en detalle cómo se aplica la metodología al proyecto y la planificación de este.
+La gran parte de las metodologías realizan sus procesos como una secuencia de pasos. Pero el gran problema es que si se comete un error en alguno de estos, volver atrás para solucionar el problema tiene un costo muy alto. Es por ello que para este proyecto se aplicó un proceso de ciclos en el desarrollo de este y así, en cualquier momento en que surjan problemas se pudiera volver atrás. Además, la metodología es tolerante al cambio siempre y cuando no afecte negativamente al proyecto, es por ello que la presencia de los stakeholders como participantes en el proyecto es de vital importancia. En los siguientes subítems discute en detalle cómo se aplica la metodología al proyecto y la planificación de este.
