--- a/Formato Memoria/Capitulo5/5.5_Modelo_relacional.tex
+++ b/Formato Memoria/Capitulo5/5.5_Modelo_relacional.tex
@@ -1,6 +1,6 @@
 La base de datos que representa la \textbf{Figura \ref{fig: Modelo_Relacional}} es de tipo relacional, la cual debe contar las tablas y sus respectivas claves primarias, relaciones y restricciones. Este tipo de base de datos puede ser tratada como si estuviera orientada a objetos. Su diseño varía de acuerdo a los cambios que se realizan en el Modelo de Datos. 
 
-\begin{figure}[tb]
+\begin{figure}[htb]
     \includegraphics[width=\textwidth]{Imagenes/Modelo_relacional_bd.png}
     \caption{\label{fig: Modelo_Relacional}Modelo Relacional de la Base de Datos del sistema.}
 \end{figure}
