Avance documento de memoria (Semiterminada)
Documento semiterminado, se agrega resumen, resúmenes del  que se encuentran en el capitulo 1bibliotecas termiandas (capitulo 2) capitulo 6 y 7 terminado y anexos terminados, se incorpora correcciones del capitulo 6 (hasta la sección de pruebas)... Falta correcciones del profe guía ademas de agregar los pantallazos de la aplicación obtenida

--- a/Formato Memoria/Anexo1/Anexo_A_Resolucion.tex
+++ b/Formato Memoria/Anexo1/Anexo_A_Resolucion.tex
@@ -1,8 +1,10 @@
+\section{Ingreso de RU}
 \addtocounter{ni}{1}
-\begin{table}[h!tb]
+\begin{table}[h]
     \caption{Caja Negra - Aceptación de solicitud e ingreso de RU.}
-    \label{tab:my-table}
+    \label{tab: Prueba5}
     \centering
+    \footnotesize
     \begin{tabular}{|l|l|l|}
         \hline
         \cellcolor{blueice}{Código} & \multicolumn{2}{l|}{Prueba \arabic{ni}}\\ \hline
@@ -10,23 +12,23 @@
         \rowcolor{blueice} 
         Entrada & Salida esperada & Salida obtenida \\ \hline
         %Entrada
-        \parbox[p][0.3\textwidth][c]{5cm}{
+        \parbox[p][0.25\textwidth][c]{4cm}{
         \begin{itemize}
             \item Aceptar solicitud.
             \item Ingresar datos de RU.
             \item Adjuntar copia digitalizada de RU en formato PDF.
         \end{itemize} }& 
         %Salida esperada
-        \parbox[p][0.3\textwidth][c]{5cm}{
+        \parbox[p][0.25\textwidth][c]{4cm}{
         \begin{itemize}
             \item Datos registrados en la BD.
             \item Mensaje de la operación.
         \end{itemize} }& 
         %Salida obtenida
-        \parbox[p][0.3\textwidth][c]{5cm}{
+        \parbox[p][0.25\textwidth][c]{4cm}{
         \begin{itemize}
             \item Mensaje de solicitud finalizada.
         \end{itemize} }\\ \hline
-        \cellcolor{blueice}{Observaciones}  & \multicolumn{2}{l|}{\parbox[p][0.1\textwidth][c]{10cm}{- - -}}\\ \hline
+        \cellcolor{blueice}{Observaciones}  & \multicolumn{2}{l|}{\parbox[p][0.05\textwidth][c]{10cm}{- - -}}\\ \hline
     \end{tabular}
 \end{table}
