--- a/Formato Memoria/Capitulo2/2.2.2_Bibliotecas.tex
+++ b/Formato Memoria/Capitulo2/2.2.2_Bibliotecas.tex
@@ -1,3 +1,3 @@
-\textbf{DinkToPdf: } biblioteca que se utiliza para convertir un documento HTML con CSS en un documento PDF. Esta librería es gratuita y de código abierto.
+\textbf{DinkToPdf: } biblioteca que se utiliza para convertir un documento HTML con CSS en un documento PDF. Esta librería es gratuita y de código abierto. La biblioteca necesita como dependencia la biblioteca wkhtmltopdf , que se debe agregar manualmente.
 
 \textbf{Wkhtmltopdf: } es una herramienta de línea de comandos, cuenta con una licencia Open Source (LGPLv3) y su objetivo es convertir páginas HTML o sitios web en archivos PDF.
