--- a/Formato Memoria/Resumen.tex
+++ b/Formato Memoria/Resumen.tex
@@ -1,3 +1,14 @@
 \begin{resumen}
-    Aquí va el resumen (en Castellano)... 
+    El proceso de Solicitud de Fondo por Rendir que realizan las distintas Organizaciones Estudiantiles de la Universidad de Talca tiene la finalidad de obtener recursos para hacer una actividad. Este proceso conlleva confeccionar una Solicitud del evento la cual es dirigida a la Dirección de Escuela en caso de Centros de Alumnos o a la Dirección de Apoyo a Actividades Estudiantiles en caso de Federación. Luego tras la aprobación de la Solicitud por entidades de la Casa de estudio, la Organización Estudiantil recibe una Resolución Universitaria correspondiente a la Solicitud. Por último, tras realizar el evento, se procede a realizar la Rendición en donde se declara los gastos incurridos en el evento. Después, esta Rendición es enviada nuevamente a la Dirección de Escuela la cual la analiza. En caso de que esté correcta, es enviada al departamento de Tesorería para su posterior revisión. En caso de ser aprobada se realiza la devolución del monto solicitado, pero si encontran un error, es rechazada y devuelta a la Organización Estudiantil para su posterior corrección.
+
+El rechazo de la Rendición es un gran problema ya que la entidad encargada de la revisión no envía una notificación con los errores detectados en las Rendición, sino que envía la notificación del primer error encontrado. Esto provoca que se posponer el reembolso del dinero además de aplazar otras actividades planificadas por la Organización Estudiantil dado a que no se puede realizar nuevas Solicitudes de Fondo por Rendir mientras no culmine una Rendición que se encuentra pendiente.
+
+Tas lo expuesto anteriormente es que esta memoria busca ayudar a resolver esta problemática, diseñando y desarrollando una herramienta cuya finalidad es brinda apoyo a las Organizaciones Estudiantiles para que asista en el proceso de Fondo por Rendir y así disminuir los posibles errores al momento de confeccionar una Solicitud y su posterior Rendición.
+
+Esta herramienta es una plataforma Web y para su construcción se utiliza la metodología de desarrollo ágil \emph{Scrum} debido a que permite la adaptación al cambio a medida que se va desarrollando el sistema en conjunto con retroalimentaciones que brindan los usuarios cuando se presentan incrementos del proyecto.
+
+Además se detalla las características del sistema y el modelo de contexto para la mayor comprensión del actual sistema y su enfoque, el cual ayuda a la planificación del ciclo de vida del proyecto. Tras lo mencionado con anterioridad se procede a realizar el diseño de la aplicación la cual comprende de confeccionar el Mapa de Navegación junto con el diseño general de la interfaz. Luego se detalla la arquitectura del sistema para así diseñar el modelo de datos y el modelo relacional.
+
+Finalmente se muestra la aplicación obtenida y los resultados obtenidos a través de evaluaciones con pruebas de caja negra y de usabilidad.
+
 \end{resumen}
