--- a/Formato Memoria/Capitulo6/6.1_Herramientas_Utilizadas.tex
+++ b/Formato Memoria/Capitulo6/6.1_Herramientas_Utilizadas.tex
@@ -1,9 +1,13 @@
-\paragraph{Entorno de trabajo: } La estación de trabajo Utilizada para la construcción de la aplicación corresponde a un computador que cuenta con un procesador Intel CORE i7 de 2.80GHz, 12Gb de RAM y con conexión a Internet. El sistema operativo es Windows 10 Home, en el cual se realizan las pruebas.
+Para el desarrollo de la aplicación se debe conocer las herramientas que ayudan a dar vida al proyecto. Es por ello que a continuación detalla el entorno de trabajo en el cual se desenvuelven la construcción y pruebas de la aplicación, los lenguajes de programación y el motor junto con la aplicación para base de datos.
 
-En cuanto a los navegadores en el cual se realizaron las pruebas son: Mozilla Firefox Quantum 67.0.1 (64-bit) e Internet Explorer. Pero el navegador recomendado es Mozilla Firefox.
+\paragraph{Entorno de trabajo: } La estación de trabajo utilizada para la construcción de la aplicación corresponde a un computador que cuenta con un procesador Intel CORE i7 de 2.80GHz, 12Gb de RAM y con conexión a Internet. El sistema operativo es Windows 10 Home. Esta misma estación se utiliza para realizar las pruebas.
+
+En cuanto a los navegadores que se usa para realizar las pruebas se consideran: Mozilla Firefox Quantum 67.0.1 (64-bit) e Internet Explorer. No obstante lo anterior, el navegador recomendado es Mozilla Firefox.
 
 \paragraph{Entorno y lenguajes de programación: } Dado a que SimRend es una aplicación Web, se utiliza el framework ASP.NET Core y junto con ello se utilizan los lenguajes C\#, JavaScript, HTML y CSS (ver \textbf{Sección \ref{sec:Tecnologias}}). En primera instancia se utilizó el IDE Visual Studio, pero debido a que hubo un conflicto con el uso de la librería DinkToPDF se migró a VSCode. La elección de estos IDE, se debe a la experiencia que ha tenido el autor al realizar proyectos en su periodo académico dentro de la casa de estudio y porque no se exige algún IDE en particular.
 
-La estructura de SimRend está hecha en HTML y el diseño es mejorado utilizando hojas de estilos (CSS), junto con la ayuda de JavaScript que permite controlar algunos eventos en el sistema. En cuanto a la capa de negocio y el modelo de datos se utiliza C\#. Todo lo anterior se une gracias a la arquitectura lógica del proyecto la cual es MVC, que es detallada en la \textbf{Sección \ref{sec:Arquitectura_Logica}}.
+La estructura de SimRend está hecha en HTML y el diseño es mejorado utilizando hojas de estilos (CSS), junto con la ayuda de JavaScript, que permite controlar algunos eventos en el sistema. En cuanto a la capa de negocio y el modelo de datos se utiliza C\#. Todo lo anterior se une gracias a la arquitectura lógica del proyecto la cual es MVC, que es detallada en la \textbf{Sección \ref{sec:Arquitectura_Logica}}.
 
-\paragraph{Motor y aplicación para base de datos: } Es un motor de base de datos relacional, la cual posee una gran estabilidad y confiabilidad además de fiabilidad e integridad de los datos. Para ello, la herramienta que se utiliza es StarUML y para la administración MySQL.
+\paragraph{Motor y aplicación para base de datos: } Como motor de base de datos relacional se utiliza MySQL, el cual posee una gran estabilidad y confiabilidad además de fiabilidad e integridad de los datos. Para el diseño del modelo relacional se utiliza es StarUML y para la administración de la base de datos se usa Navicat.
+
+%Cabe señalar que Navicat es una aplicación que ayuda a la administración de la BD que utiliza el sistema. Sin embargo, para el funcionamiento de la aplicación no es necesario que Navicat esté conectado a la BD ya que este procedimiento de conexion entre la BD y el sistema  se encuentra dentro de la aplicación. Por otra parte, para el montar el servidor de la BD se utiliza XAMPP Control Panel.
