Actualización posición imagenes anexo 2

--- a/Formato Memoria/Anexo2/Anexo_B_General_Sistema.tex
+++ b/Formato Memoria/Anexo2/Anexo_B_General_Sistema.tex
@@ -1,13 +1,11 @@
-\section{Sección de preguntas generales sobre el sistema}
-
 \paragraph{1.  ¿Cree usted que es necesaria una herramienta que ayude a las OE a realizar el proceso de Solicitud de Fondo por Rendir?}.
 
     \begin{figure}[h!]
         \centering
-        \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta1.png}
+        \includegraphics[width=0.6\textwidth]{Imagenes/Pregunta1.png}
         \caption{\label{fig: Pregunta1}Resultado de la pregunta uno.}
     \end{figure}
-
+\newpage
 \paragraph{2.  ¿Cree usted que esta herramienta puede ayudar a reducir el tiempo que demanda realizar una rendición? (En escala de 1 (No es de ayuda) a 5 (Es de mucha ayuda))}.
 
 \begin{figure}[h!]
